--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -5,26 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Каталог</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
     <nav>
         <ul>
             <li>
-                <a href="../index.html">Главная</a>
+                <a class="nav-link" href="../index.html">Главная</a>
             </li>
             <li>
-                <a href="catalog.html">Каталог</a>
+                <a class="nav-link" href="catalog.html">Каталог</a>
             </li>
             <li>
-                <a href="#">Контакты</a>
+                <a class="nav-link" href="#">Контакты</a>
             </li>
         </ul>
     </nav>
     
     <main>
-        <h1>Каталог</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nulla odio dicta aspernatur perspiciatis
+        <h1 class="title">Каталог</h1>
+        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nulla odio dicta aspernatur perspiciatis
             dolores laudantium voluptatem ullam rem porro excepturi tenetur alias quibusdam quasi accusantium quaerat,
             totam ea ab vitae incidunt harum. Fuga, eius? Ut, corporis alias perspiciatis labore consectetur, iure omnis
             dolorem blanditiis vero magnam impedit excepturi, delectus aut dolor praesentium. Et qui excepturi
@@ -37,24 +38,24 @@
             eaque inventore sunt suscipit, ipsum quidem? Quae asperiores saepe exercitationem?</p>
         <div>
             <img width="250" height="250" src="../img/product-1.jpg" alt="product-1">
-            <h2>Продукт 1</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci vel praesentium sit molestiae. Sint
+            <h2 class="subtitle">Продукт 1</h2>
+            <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci vel praesentium sit molestiae. Sint
                 blanditiis neque est dignissimos velit beatae mollitia magnam incidunt cumque quia, voluptatem
                 temporibus ab ratione qui tempora, quasi nemo quaerat laborum commodi aspernatur, voluptates saepe
                 nulla.</p>
         </div>
         <div>
             <img width="250" height="250" src="../img/product-2.jpg" alt="product-2">
-            <h2>Продукт 2</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci vel praesentium sit molestiae. Sint
+            <h2 class="subtitle">Продукт 2</h2>
+            <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci vel praesentium sit molestiae. Sint
                 blanditiis neque est dignissimos velit beatae mollitia magnam incidunt cumque quia, voluptatem
                 temporibus ab ratione qui tempora, quasi nemo quaerat laborum commodi aspernatur, voluptates saepe
                 nulla.</p>
         </div>
         <div>
             <img width="250" height="250" src="../img/product-3.jpg" alt="product-3">
-            <h2>Продукт 3</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci vel praesentium sit molestiae. Sint
+            <h2 class="subtitle">Продукт 3</h2>
+            <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci vel praesentium sit molestiae. Sint
                 blanditiis neque est dignissimos velit beatae mollitia magnam incidunt cumque quia, voluptatem
                 temporibus ab ratione qui tempora, quasi nemo quaerat laborum commodi aspernatur, voluptates saepe
                 nulla.</p>
