--- a/index.html
+++ b/index.html
@@ -5,36 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <nav>
         <ul>
             <li>
-                <a href="index.html">Главная</a>
+                <a class="nav-link" href="index.html">Главная</a>
             </li>
             <li>
-                <a href="catalog/catalog.html">Каталог</a>
+                <a class="nav-link" href="catalog/catalog.html">Каталог</a>
             </li>
             <li>
-                <a href="#">Контакты</a>
+                <a class="nav-link" href="#">Контакты</a>
             </li>
         </ul>
     </nav>
 
     <main>
-        <h1>Главная страница</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quae doloribus quod assumenda a voluptate,
+        <h1 class="title">Главная страница</h1>
+        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quae doloribus quod assumenda a voluptate,
             maiores
             quibusdam animi ex alias modi pariatur culpa sequi corporis. Quae temporibus dolorem totam excepturi.</p>
-        <h2>Добро пожаловать на сайт</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro, ducimus officiis aperiam minus harum ea
+        <h2 class="subtitle">Добро пожаловать на сайт</h2>
+        <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro, ducimus officiis aperiam minus harum ea
             quidem
             voluptatum modi tempore iure rerum vitae deleniti totam. Voluptatibus commodi libero ipsum nihil earum.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro, ducimus officiis aperiam minus harum ea
+        <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro, ducimus officiis aperiam minus harum ea
             quidem
             voluptatum modi tempore iure rerum vitae deleniti totam. Voluptatibus commodi libero ipsum nihil earum.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro, ducimus officiis aperiam minus harum ea
+        <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro, ducimus officiis aperiam minus harum ea
             quidem
             voluptatum modi tempore iure rerum vitae deleniti totam. Voluptatibus commodi libero ipsum nihil earum.</p>
     </main>
