New project. Task 3

--- a/index.html
+++ b/index.html
@@ -1,44 +1,47 @@
 <!DOCTYPE html>
-<html lang="ru">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная</title>
+    <title>New project</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <nav>
-        <ul>
-            <li>
-                <a class="nav-link" href="index.html">Главная</a>
-            </li>
-            <li>
-                <a class="nav-link" href="catalog/catalog.html">Каталог</a>
-            </li>
-            <li>
-                <a class="nav-link" href="#">Контакты</a>
-            </li>
-        </ul>
-    </nav>
-
-    <main>
-        <h1 class="title">Главная страница</h1>
-        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quae doloribus quod assumenda a voluptate,
-            maiores
-            quibusdam animi ex alias modi pariatur culpa sequi corporis. Quae temporibus dolorem totam excepturi.</p>
-        <h2 class="subtitle">Добро пожаловать на сайт</h2>
-        <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro, ducimus officiis aperiam minus harum ea
-            quidem
-            voluptatum modi tempore iure rerum vitae deleniti totam. Voluptatibus commodi libero ipsum nihil earum.</p>
-        <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro, ducimus officiis aperiam minus harum ea
-            quidem
-            voluptatum modi tempore iure rerum vitae deleniti totam. Voluptatibus commodi libero ipsum nihil earum.</p>
-        <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro, ducimus officiis aperiam minus harum ea
-            quidem
-            voluptatum modi tempore iure rerum vitae deleniti totam. Voluptatibus commodi libero ipsum nihil earum.</p>
-    </main>
+    <div class="top">
+        <div class="header">
+            <img src="img/logo.svg" alt="Company logo">
+            <div class="navbar">
+                <a class="navbar-link" href="#">Home</a>
+                <a class="navbar-link" href="#">About Us</a>
+                <a class="navbar-link" href="#">Services</a>
+                <a class="navbar-link" href="#">
+                    <span>Features</span>
+                    <img src="img/vector.svg" alt="vector">
+                </a>
+                <a class="navbar-link" href="#">Team</a>
+                <a class="navbar-link" href="#">Blog</a>
+                <a class="navbar-link" href="#">Contact</a>
+            </div>
+        </div>
+        <div class="top-content">
+            <div class="top-info">
+                <h1 class="title">SEO & Digital Marketing For Your Website.</h1>
+                <p class="text">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</p>
+                <div class="top-buttons">
+                    <button class="button">Start Now</button>
+                    <button class="button">Watch video</button>
+                </div>
+            </div>
+            <img src="img/top-img.svg" alt="top-img">
+        </div>
+        <div class="top-logo">
+            <img src="img/logo-1.svg" alt="logos">
+            <img src="img/logo-6.svg" alt="logos">
+            <img src="img/logo-3.svg" alt="logos">
+            <img src="img/logo-4.svg" alt="logos">
+            <img src="img/logo-5.svg" alt="logos">
+            <img src="img/logo-6.svg" alt="logos">
+        </div>
+    </div>
 </body>
-
 </html>
