Add work 4 and 5

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New project</title>
+    <link href="https://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="top">
         <div class="header">
-            <img src="img/logo.svg" alt="Company logo">
+            <img class="main-logo" src="img/logo.svg" alt="Company logo">
             <div class="navbar">
-                <a class="navbar-link" href="#">Home</a>
+                <a class="navbar-link active" href="#">Home</a>
                 <a class="navbar-link" href="#">About Us</a>
                 <a class="navbar-link" href="#">Services</a>
                 <a class="navbar-link" href="#">
@@ -29,10 +30,10 @@
                 <p class="text">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</p>
                 <div class="top-buttons">
                     <button class="button">Start Now</button>
-                    <button class="button">Watch video</button>
+                    <p class="button-text">Watch video</p>
                 </div>
             </div>
-            <img src="img/top-img.svg" alt="top-img">
+            <img class="top-img" src="img/top-img.svg" alt="top-img">
         </div>
         <div class="top-logo">
             <img src="img/logo-1.svg" alt="logos">
@@ -43,5 +44,71 @@
             <img src="img/logo-6.svg" alt="logos">
         </div>
     </div>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About us</title>
+    <link href="https://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <section class="advantages">
+        <div class="adv-item">
+            <img src="img/icon-grow.svg" alt="grow icon" class="adv-icon">
+            <h2 class="subtitle">Grow Your Business</h2>
+            <p class="text">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <a class="adv-link" href="#">Read more...</a>
+        </div>
+        <div class="adv-item">
+            <img src="img/icon-energy.svg" alt="energy icon" class="adv-icon">
+            <h2 class="subtitle">Get Quality Ieads</h2>
+            <p class="text">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <a class="adv-link" href="#">Read more...</a>
+        </div>
+        <div class="adv-item">
+            <img src="img/icon-tag.svg" alt="tag icon" class="adv-icon">
+            <h2 class="subtitle">Drive More Sales</h2>
+            <p class="text">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <a class="adv-link" href="#">Read more...</a>
+        </div>
+    </section>
+    <section class="choose">
+        <h1 class="title">Why You Should Choose Us.</h1>
+        <p class="text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business
+            applications through revolutionary catalysts.</p>
+        <div class="choose-list">
+            <div class="choose-item">
+                <img class="choose-img" src="img/choose-1.svg" alt="choose 1 image">
+                <h2 class="subtitle">Keyword Research</h2>
+                <p class="text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button class="button choose-button">
+                    <span>Learn More</span>
+                    <img src="img/vector-right.svg" alt="vector right">
+                </button>
+            </div>
+            <div class="choose-item">
+                <img class="choose-img" src="img/choose-2.svg" alt="choose 2 image">
+                <h2 class="subtitle">Seo Optimazadion</h2>
+                <p class="text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button class="button choose-button">
+                    <span>Learn More</span>
+                    <img src="img/vector-right.svg" alt="vector right">
+                </button>
+            </div>
+            <div class="choose-item">
+                <img class="choose-img" src="img/choose-3.svg" alt="choose 3 image">
+                <h2 class="subtitle">Social Marketing</h2>
+                <p class="text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button class="button choose-button">
+                    <span>Learn More</span>
+                    <img src="img/vector-right.svg" alt="vector right">
+                </button>
+            </div>
+        </div>
+    </section>
+</body>
+</html>
 </body>
 </html>
